{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 77,
  "lineage": "4b0630d0-94ea-c001-2813-76ea151d9caa",
  "resources": [
    {
      "module": "module.prod_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eecef118bbf9259",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-0467ffa9145c081b8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0467ffa9145c081b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_xl_pract_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edae9584e71f1a2a",
            "private_dns": "ip-10-100-0-202.ec2.internal",
            "private_ip": "10.100.0.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030080cfdce9c58cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e89f248bccd1baa5",
            "tags_all": {
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c32d385522ff738"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-linux-2",
            "module.prod_vpc.aws_subnet.this_sub_pub",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08eeadb2a5a4f2a89",
            "association_id": "eipassoc-02f396cecebbda22a",
            "domain": "vpc",
            "id": "eipalloc-08eeadb2a5a4f2a89",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0093e8fc46edfd906",
            "private_dns": "ip-10-100-0-89.ec2.internal",
            "private_ip": "10.100.0.89",
            "public_dns": "ec2-3-95-142-68.compute-1.amazonaws.com",
            "public_ip": "3.95.142.68",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-03c92768d50b324d5",
            "id": "igw-03c92768d50b324d5",
            "owner_id": "509130302659",
            "tags": {
              "Name": "prod_main-ing"
            },
            "tags_all": {
              "Name": "prod_main-ing",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc_id": "vpc-0fe57cff495b5e5ae"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08eeadb2a5a4f2a89",
            "connectivity_type": "public",
            "id": "nat-0a5ae99414c1de87d",
            "network_interface_id": "eni-0093e8fc46edfd906",
            "private_ip": "10.100.0.89",
            "public_ip": "3.95.142.68",
            "subnet_id": "subnet-0e89f248bccd1baa5",
            "tags_all": {
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            }
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.this",
            "module.prod_vpc.aws_subnet.this_sub_pub",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-r-t-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-06db6bdb46f8db098",
            "id": "rtb-06db6bdb46f8db098",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a5ae99414c1de87d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod_main-r-t-pri"
            },
            "tags_all": {
              "Name": "prod_main-r-t-pri",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe57cff495b5e5ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_eip.this",
            "module.prod_vpc.aws_nat_gateway.this",
            "module.prod_vpc.aws_subnet.this_sub_pub",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-r-t-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-078be914dbf7772a8",
            "id": "rtb-078be914dbf7772a8",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c92768d50b324d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod_main-r-t-pub"
            },
            "tags_all": {
              "Name": "prod_main-r-t-pub",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe57cff495b5e5ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.this",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this-as-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00748437af0a1de2b",
            "route_table_id": "rtb-078be914dbf7772a8",
            "subnet_id": "subnet-0e89f248bccd1baa5"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.this",
            "module.prod_vpc.aws_route_table.this-r-t-pub",
            "module.prod_vpc.aws_subnet.this_sub_pub",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_sub_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nombre",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0e89f248bccd1baa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e89f248bccd1baa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_main-nombre",
              "env": "ac-xl-module-lab-f"
            },
            "tags_all": {
              "Name": "prod_main-nombre",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-xl-module-lab-f"
            },
            "vpc_id": "vpc-0fe57cff495b5e5ae"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-0fe57cff495b5e5ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0b5995fb1696d1fd9",
            "default_route_table_id": "rtb-095257af4bee3380f",
            "default_security_group_id": "sg-04c32d385522ff738",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": false,
            "id": "vpc-0fe57cff495b5e5ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095257af4bee3380f",
            "owner_id": "509130302659",
            "tags": {
              "Name": "prod_main"
            },
            "tags_all": {
              "Name": "prod_main",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            }
          }
        }
      ]
    }
  ]
}